(fix): fixed alignment issues

--- a/src/Hero.css
+++ b/src/Hero.css
@@ -65,8 +65,8 @@
   }
   
   .bokeh-circle {
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
     background-color: #4CAF50; /* Green color */
     border-radius: 50%; /* Ensure it's a circle */
     opacity: 0.2; /* Initial opacity */
